# notemancy-studio

./: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.js
src/: app.css  app.html  theme.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: libc10.dylib  libpytorch_jni.dylib  libtorch_cpu.dylib  libtorch_python.dylib
src-tauri/src/: main.rs
src/lib/: apiKey.ts  stores.ts
src/lib/api/: client.ts
src/lib/components/: ToC.svelte
src/lib/server/db/: schema.ts
src/params/: img.js
src/routes/[...img=img]/: +server.ts
src/routes/[...path]/: +page.svelte  tw.css
src/routes/[...path]/lib/: CommandPalette.svelte  ConnectedNotes.svelte  FileTree.svelte  Toc.svelte  TocTree.svelte  Tree.svelte  cartawiki.ts
src/routes/[...path]/lib/mdplugins/: Callout.svelte  NotePreview.svelte  Toc.svelte  Tree.svelte  WikiLinkPreview.svelte  WikiLinkPreviewWrapper.svelte  calloutsPlugin.ts  rehypeHeadings.ts  remarkHighlight.ts  remarkImages.ts  remarkWiki.ts  tocPlugin.ts
